--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -31,8 +31,8 @@
         <!-- Masthead-->
         <header class="masthead" style="margin-top: 60px;">
             <div class="container" style="background-color: rgba(30, 30, 30, 0.5); box-shadow: none;">
-                <div class="masthead-subheading">People Freezing on the Street</div>
-                <div style="margin-bottom: 30px;" class="masthead-heading text-uppercase">Ends with You</div>
+                <div class="masthead-subheading">Saving Lives</div>
+                <div style="margin-bottom: 30px;" class="masthead-heading text-uppercase">Start with You</div>
                 <div><a class="btn btn-primary btn-xl text-uppercase" style="color: #f7f4de;" href="/howToHelp">How can I Help?</a></div>
                 
             </div>
