--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -78,8 +78,8 @@
                 
                 <!-- Read More Section -->
                 <div class="mt-3">
-                    <button class="btn btn-link btn-sm p-0 text-decoration-none" type="button" data-bs-toggle="collapse" data-bs-target="#projectDetails" aria-expanded="false" aria-controls="projectDetails">
-                        <small class="text-muted">Read More <i class="fas fa-chevron-down"></i></small>
+                    <button class="btn btn-link p-0 fw-bold text-decoration-underline" type="button" data-bs-toggle="collapse" data-bs-target="#projectDetails" aria-expanded="false" aria-controls="projectDetails" style="font-size: 1rem;">
+                        Read More <i class="fas fa-chevron-down"></i>
                     </button>
                     
                     <div class="collapse mt-2" id="projectDetails">
