--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="DEMO SITE - This is a student project for learning web development. This is NOT the real Turtle Shelter Project website. Visit the real charity at turtleshelterproject.org" />
         <meta name="author" content="" />
-        <title>Turtle Shelter Project - DEMO SITE (Student Project)</title>
+        <title>Turtle Shelter Charity - DEMO SITE (Student Project)</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
